--- a/index.html
+++ b/index.html
@@ -1,42 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Portfolio</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css" type="text/css" media="screen" title="no title" charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
-    <body>
-        <header class="header-nav">
+    <body class="container">
+        <header class="header-nav row">
             <div class="header-container">
                 <div class="header-left">
                     <img width="65" height="65" alt="Udacity Logo" src="https://cdn.worldvectorlogo.com/logos/udacity.svg">
                 </div>
                 <div class="header-right">
-                    <div class="header-name">Rajashekar Chintalapati</div>
+                    <div class="header-name">Rajashekar Ch</div> 
                     <div class="header-sub-name">Front-End Learner</div>
                 </div>
             </div>
         </header>
-        <article class="article-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-            It has survived not only five centuries, but also the leap into electronic typesetting, 
-            remaining essentially unchanged. It was popularised in the 1960s with the release of 
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
-            software like Aldus PageMaker including versions of Lorem Ipsum.
-        </article>
-        <div class="image-one">
-            <img width="800" height="600" alt="test" src="https://cdn.pixabay.com/photo/2014/06/03/19/38/board-361516_1280.jpg">
-        </div>
-        <div class="image-two">
-            <img width="300" height="150" alt="test" src="https://cdn.pixabay.com/photo/2017/06/28/10/53/board-2450236_1280.jpg">
-        </div>
-        <div class="image-two">
-            <img width="300" height="150" alt="test" src="https://cdn.pixabay.com/photo/2013/01/04/07/15/board-73496_1280.jpg">
-        </div>
-        <div class="image-two">
-            <img width="300" height="150" alt="test" src="https://cdn.pixabay.com/photo/2015/09/01/09/33/school-916678_1280.jpg">
+        <div class="body-container row">
+            <article class="article-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                It has survived not only five centuries, but also the leap into electronic typesetting, 
+                remaining essentially unchanged. It was popularised in the 1960s with the release of 
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+                software like Aldus PageMaker including versions of Lorem Ipsum.
+            </article>
+            <div class="image-one">
+                <img width="100%" height="auto" alt="test" src="https://cdn.pixabay.com/photo/2014/06/03/19/38/board-361516_1280.jpg">
+            </div>
+            <div class="featured"> Featured Work </div>
+            <div class="images">
+                <div class="image-two">
+                    <img width="300" height="150" alt="test" src="https://cdn.pixabay.com/photo/2017/06/28/10/53/board-2450236_1280.jpg">
+                    <div class="title">Title 1</div>
+                </div>
+                <div class="image-two">
+                    <img width="300" height="150" alt="test" src="https://cdn.pixabay.com/photo/2013/01/04/07/15/board-73496_1280.jpg">
+                    <div class="title">Title 2</div>
+                </div>
+                <div class="image-two">
+                    <img width="300" height="150" alt="test" src="https://cdn.pixabay.com/photo/2015/09/01/09/33/school-916678_1280.jpg">
+                    <div class="title">Title 3</div>
+                </div>
+            </div>
         </div>
         <footer>
         </footer>
